third_party/rust/pin-project/tests/ui/unsafe_unpin/not-implement-unsafe-unpin.stderr
error[E0277]: the trait bound `Struct<(), ()>: UnsafeUnpin` is not satisfied
  --> $DIR/not-implement-unsafe-unpin.rs:13:16
   |
10 | fn is_unpin<T: Unpin>() {}
   |                ----- required by this bound in `is_unpin`
...
13 |     is_unpin::<Struct<(), ()>>(); //~ ERROR E0277
   |                ^^^^^^^^^^^^^^ the trait `UnsafeUnpin` is not implemented for `Struct<(), ()>`
   |
   = note: required because of the requirements on the impl of `UnsafeUnpin` for `Wrapper<'_, Struct<(), ()>>`
   = note: required because of the requirements on the impl of `Unpin` for `Struct<(), ()>`
